--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/recoil": "^0.0.9",
     "axios": "^0.27.2",
     "react": "^18.1.0",
